<resources>
    <string name="app_name">ITsWinter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">It is Winter</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="covid">Covid-19</string>
    <string name="event">Ticket Event</string>
    <string name="audio">Audio API</string>
    <string name="receipt">Recipe Cook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="welcome_to_our_app">Welcome To Our App</string>
    <string name="help">Help</string>

    <string name="e_searchButtonString">Search</string>
    <string name="e_searchBarHint">Enter search term</string>
    <string name="e_welcomeText">Welcome to the Ticket Master Search</string>
    <string name="e_citySearchBarHint">Enter city</string>
    <string name="e_radiusSearchBarHint">Enter Radius</string>
    <string name="e_goToSiteBtnHint">Go to Site</string>

    <string name="enter_album_name">Enter Album name</string>
    <string name="search">Search</string>
    <string name="title_activity_track">TrackActivity</string>
    <string name="album">Album</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_your_memo">Please enter your memo</string>
    <string name="ok">OK</string>
    <string name="my_memo">My Memo</string>
    <string name="track_list">Track List</string>
    <string name="my_album_list">My Album List</string>
    <string name="require_keyword">Please enter your keyword</string>

    <string name="e_radiusErrorString">Radius must be at least 100km</string>
    <string name="e_saveEventString">Save this Event</string>
    <string name="e_revertString">Revert save?</string>
    <string name="e_removeString">Revert</string>
    <string name="e_alertTitleTrueString">Unsave?</string>
    <string name="e_alertMessageFalseString">Would you like to save this event?</string>
    <string name="e_yesString">Yes</string>
    <string name="e_noString">No</string>
    <string name="e_alertMessageTrueString">Would you like to unsave this event</string>
    <string name="e_alertTitleFalseString">Save?</string>
    <string name="e_savedButtonString">Saved</string>
    <string name="e_searchErrorString">There has been an error, please try again</string>
    <string name="e_goToSiteAlertTitle">Open Browser?</string>
    <string name="e_goToSiteAlertMessage">Would you like to open Ticket Master.ca?</string>
    <string name="e_goToTicketMasterWebsiteString">Go to Ticket Master.ca</string>
    <string name="e_saveCbHintTrue">Unsave</string>
    <string name="e_saveCbHintFalse">Save</string>
    <string name="e_undoString">Undo</string>
    <string name="e_snackBarTrueString">This event has been unsaved</string>
    <string name="e_snackBarFalseString">This event has been saved</string>
    <string name="e_homeHelpMessageTitle">Help</string>
    <string name="e_homeHelpMessageBody">Enter the city and radius of you would like to search in the first two boxes. Press the search button to search, saved button to see events you have saved.</string>
    <string name="e_DetailsHelpMessageBody">Thiis screen shows event details. Click the button to go to Ticket Master.ca</string>
    <string name="e_ResultsHelpMessageBody">Click an event to see more details</string>
    <string name="e_developerInfo">Developer Info</string>

    <string name="a_Undo">Undo</string>
    <string name="go_main_home">Go Main Home</string>
    <string name="audio_api">Audio API</string>
    <string name="album_list">Album List</string>
    <string name="main_title">It\'s Winter</string>


    <string name="c_home_title">Covid-19 Case Data</string>
    <string name="c_result_title">Covid Search Result</string>
    <string name="c_country">Country</string>
    <string name="c_country_hint">Type Country Name</string>
    <string name="c_date_hint">Click to pick date</string>
    <string name="c_date">Date</string>
    <string name="c_search">Search</string>
    <string name="c_country_empty">Country field can\'t be empty.</string>
    <string name="c_date_empty">Date field can\'t be empty.</string>
    <string name="c_home_help">Enter country name and date and click on the Search button.</string>
    <string name="c_result_help">Turn on the switch to show the results by number of cases in ascending order.</string>
    <string name="c_sort">Sort by number of cases</string>
    <string name="c_sort_on">The sort is now on.</string>
    <string name="c_sort_off">The sort is now off.</string>
    <string name="enter_recipe_keyword">Enter recipe keyword</string>
    <string name="searchRecipeButton">Search</string>
    <string name="favorites_list">Favorites List</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="save_to_favorites">SAVE TO FAVORITES</string>
    <string name="recipe_title1">Recipe Search V.1 Jiyeon Choi</string>
    <string name="toast1">Please enter recipe keyword</string>
    <string name="snackbar1">No Results</string>
    <string name="detailPageTitle">Recipe Detail</string>
    <string name="alert1">Recipe</string>
    <string name="alert2">Favorite Saved</string>
    <string name="favoritesTitle">Saved Favorites</string>
    <string name="r_favorites_list">Favorites List</string>
    <string name="r_enter_recipe_keyword">Enter recipe keyword</string>
    <string name="r_search">Search</string>
    <string name="r_save_to_favorites">SAVE TO FAVORITES</string>
    <string name="r_textview">TextView</string>
    <string name="r_delete_from_favorites">Delete from Favorites</string>
    <string name="r_title1">Recipe Detail Page</string>
    <string name="r_help_message1">Click on Save to Favorites to add to the Saved Favorites list and Delete from Favorites to remove.</string>
    <string name="r_title2">Saved Favorites</string>
    <string name="r_help_message2">This is a list of your favorite recipes.</string>
    <string name="r_alert1">Recipe</string>
    <string name="r_alert_message1">Favorite Saved</string>
    <string name="r_delete_message1">Recipe deleted from Favorites.</string>
    <string name="r_help_message3">Click search button to search a recipe and Star to look at your favorite recipes.</string>

    <string name="c_details">Details</string>
    <string name="c_OK">OK</string>
    <string name="c_author">Hyun Ju Jang</string>
    <string name="c_version_number">Version 1.0</string>
    <string name="c_save_data">Save</string>
    <string name="c_load_data">Load</string>
    <string name="c_saved_result">Saved Result</string>
    <string name="c_saved_list">Saved List</string>
    <string name="c_delete_title">Do you want to delete?</string>
    <string name="c_delete_msg">The selected row is:</string>
    <string name="c_delete_yes">Yes</string>
    <string name="c_delete_no">No</string>
    <string name="c_invalid_date">Select day before today.</string>


</resources>