<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_recipe"
        android:orderInCategory="100"
        android:title="@string/receipt"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_covid19"
        android:orderInCategory="100"
        android:title="@string/covid"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_audioApi"
        android:orderInCategory="100"
        android:title="@string/audio"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_event"
        android:orderInCategory="100"
        android:title="@string/event"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>