<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".covid.CovidHomeActivity">

    <TextView
        android:id="@+id/c_activity_title"
        android:layout_marginTop="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/c_home_title"/>

    <TextView
        android:id="@+id/c_author_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/c_author"/>

    <TextView
        android:id="@+id/c_version_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10pt"
        android:text="@string/c_version_number"/>

    <TextView
        android:id="@+id/c_country_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_country"/>

    <EditText
        android:id="@+id/c_country_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/c_country_hint"/>

    <TextView
        android:id="@+id/c_date_txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_date"/>

    <EditText
        android:id="@+id/c_date_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/c_date_hint"/>

    <Button
        android:id="@+id/c_search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c_search" />
</LinearLayout>