<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:paddingLeft="20dp"
    android:background="#b1b1b1"
    android:layout_width="match_parent"

    android:layout_height="190dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivHeaderIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nav_header_desc"
            android:layout_marginTop="70dp"

            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivHeaderIcon"


            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_below="@id/tvHeaderTitle"

            android:text="@string/nav_header_subtitle" />
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

    </RelativeLayout>

</LinearLayout>